Fixes svg height on Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,5 +16,6 @@ form {
 
 .svg {
   height: 100%;
+  max-height: 100%;
   max-width: 100%;
 }
